--- a/demo/index.html
+++ b/demo/index.html
@@ -8,8 +8,17 @@
         </style>
     </head>
     <body>
-        <img src="D.svg" alt="D">
-        <img src="F.svg" alt="F">
-        <img src="C-shape.svg" alt="C shape">
+        <img src="svg/D.svg" alt="D">
+        <img src="svg/F-sharp.svg" alt="F#">
+        <img src="svg/C-shape.svg" alt="C shape">
+
+        <br />
+
+        <img src="svg/F-sharp-rocksmith.svg" alt="F# w/ Rocksmith colors">
+        <img src="svg/pentatonic-shape.svg" alt="pentatonic 1">
+
+        <img src="svg/ukulele-G.svg" alt="pentatonic 1">
+        <img src="svg/bass-E.svg" alt="pentatonic 1">
+
     </body>
 </html>
